widget/windows/nsLookAndFeel.cpp
@@ -838,10 +838,6 @@ auto nsLookAndFeel::ComputeTitlebarColors() -> TitlebarColors {
     result.mInactiveLight.mFg = result.mInactiveDark.mFg =
         *result.mAccentInactiveText;
   } else {
-    // The 153 matches the .6 opacity the front-end uses, which was calculated
-    // to match the opacity change of Windows Explorer titlebar text change
-    // for inactive windows.
-    constexpr uint8_t kTextAlpha = 153;
     // This is hand-picked to .8 to change the accent color a bit but not too
     // much.
     constexpr uint8_t kBgAlpha = 208;
@@ -850,16 +846,11 @@ auto nsLookAndFeel::ComputeTitlebarColors() -> TitlebarColors {
       return NS_ComposeColors(
           aBg, NS_RGBA(NS_GET_R(aFg), NS_GET_G(aFg), NS_GET_B(aFg), aAlpha));
     };
-
     result.mInactiveLight.mBg =
         BlendWithAlpha(NS_RGB(255, 255, 255), *result.mAccent, kBgAlpha);
-    result.mInactiveLight.mFg =
-        BlendWithAlpha(*result.mAccent, *result.mAccentText, kTextAlpha);
-
     result.mInactiveDark.mBg =
         BlendWithAlpha(NS_RGB(0, 0, 0), *result.mAccent, kBgAlpha);
-    result.mInactiveDark.mFg =
-        BlendWithAlpha(*result.mAccent, *result.mAccentText, kTextAlpha);
+    result.mInactiveLight.mFg = result.mInactiveDark.mFg = *result.mAccentText;
   }
   return result;
 }
